fix(swagger): restrict wallet size (#21)
