# api/openapi/swagger.yml
@@ -2,7 +2,7 @@ swagger: '2.0'
 
 info:
   title: HighLoad Cup 2020
-  version: 0.1.0
+  version: 0.2.0
   description: |
     # IT RALLY 2020 HighLoad Cup
 basePath: /
@@ -29,13 +29,26 @@ definitions:
         format: int32
       message:
         type: string
+  balance:
+    description: Current balance and wallet with up to 1000 coins.
+    type: object
+    required:
+      - balance
+      - wallet
+    properties:
+      balance:
+        type: integer
+        format: uint32
+      wallet:
+        $ref: '#/definitions/wallet'
   wallet:
-    description: Wallet with some amount of money.
-    #type: integer
-    #minimum: 0
+    description: Wallet with some coins.
     type: array
+    maxItems: 1000
+    uniqueItems: true
     items:
-      type: string
+      type: integer
+      format: uint32
   amount:
     description: Non-negative amount of treasures/etc.
     type: integer
@@ -129,7 +142,7 @@ responses:
   balance:
     description: Current balance.
     schema:
-      $ref: '#/definitions/wallet'
+      $ref: '#/definitions/balance'
   licenseList:
     description: List of issued licenses.
     schema:
